fixed issue, that map isn't clickable anymore, after setting z-index on map

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,4 +5,5 @@
 .header-container {
     position: sticky;
     top: 0;
+    z-index: 10;
 }
