--- a/frontend/src/components/LocationMap.css
+++ b/frontend/src/components/LocationMap.css
@@ -1,5 +1,5 @@
 .map-container {
     width: 100%;
     height: 20rem;
-    z-index: -1;
+    z-index: 0;
 }
